4/best-practices-analyzer/gatekeeper/operator/usecases/requiredprobes-policy/01-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredProbes
metadata:
  name: must-have-probes
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["apps.openshift.io"]
        kinds: ["DeploymentConfig"]
  parameters:
    probes: ["readinessProbe", "livenessProbe"]
    probeTypes: ["tcpSocket", "httpGet", "exec"]
